<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:background="#F1F6FA"
        android:gravity="center"
        android:text="@string/date"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/description"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textViewDate"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewAmount"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/amount"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textViewDate"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />

    <TextView
        android:id="@+id/textViewType"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/type"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textViewAmount"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>