<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#4ba8eb">

    <TextView
        android:id="@+id/textViewMainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="80dp"
        android:text="@string/mbanking_app"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mainActivityLoginButton"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="92dp"
        android:onClick="clickButtonLogin"
        android:text="@string/log_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMainTitle" />

    <Button
        android:id="@+id/button3"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="52dp"
        android:onClick="clickButtonRegistration"
        android:text="@string/registerr"
        android:textColor="#81D4FA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainActivityLoginButton"
        tools:ignore="TextContrastCheck,TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>