<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="#4ba8eb">

    <TextView
        android:id="@+id/loginTextViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="96dp"
        android:text="mBanking"
        android:textColor="#1B5E20"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/loginEditTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_user_s_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#1B5E20"
        android:textColorHint="@color/cardview_dark_background"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTextViewTitle" />

    <EditText
        android:id="@+id/loginEditTextUserSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_user_s_surname"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#1B5E20"
        android:textColorHint="@color/cardview_dark_background"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEditTextTextPersonName" />

    <EditText
        android:id="@+id/loginEditTextPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:gravity="center"
        android:hint="Enter PIN : "
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#1B5E20"
        android:textColorHint="@color/cardview_dark_background"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEditTextUserSurname" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="88dp"
        android:hapticFeedbackEnabled="false"
        android:onClick="clickLoginButton"
        android:text="@string/login"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEditTextPin" />


</androidx.constraintlayout.widget.ConstraintLayout>